# pluribus-swarm

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  brailleKernel.ts  braille_schema.sql  chat.test.ts  chatRouter.ts  cognitiveMetrics.test.ts  cognitiveMetrics.ts  conceptConvergence.ts  contextManager.ts  conversations.ts  ideas.md  index.html  metaController.test.ts  metaController.ts  package-lock.json  package.json  playwright.config.ts  routers.ts  schema.ts  start.sh  tailwind.config.js  todo.md  tools.test.ts  tools.ts  vite.config.ts
legacy/: README.md  brailleKernel.test.ts  scheduledAutoConvergence.ts  searchLearning.test.ts  semanticExtraction.ts  swarmIntelligence.ts
pluribus-swarm/: index.html  package-lock.json  package.json
server/: activeInference.ts  brailleKernel.ts  conceptConvergence.ts  context.ts  contextManager.ts  db.ts  identity.ts  index.ts  learning.ts  llm.ts  metaController.ts  metrics.ts  package-lock.json  package.json  predictiveConvergence.ts  routers.ts  scheduledConvergence.ts  teleonomic.ts  tools.ts  transformerSwarmFusion.ts  trpc.ts
src/: App.tsx  const.ts  index.css
src/_core/hooks/: useAuth.ts
src/components/: ErrorBoundary.tsx  SwarmCanvas.tsx  SwarmCanvasRust.tsx  SwarmChat.tsx  WelcomeModal.tsx
src/contexts/: ThemeContext.tsx
src/lib/: Quadtree.ts  trpc.ts
src/pages/: BrailleKernel.tsx  Convergence.tsx  Evolution.tsx  Home.tsx  Home.tsx.bak  KnowledgeGraph.tsx  NotFound.tsx
swarm-core/: Cargo.toml
swarm-core/src/: lib.rs
tests/: search.spec.ts  swarm-chat.spec.ts  swarm.spec.ts
(+3 files in other folders)
