[package]
name = "swarm-core"
version = "0.1.0"
edition = "2021"
description = "High-performance swarm substrate for AGI visualization"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
